Update cross-origin resource sharing settings for broader access
Modify CORS configuration to allow all origins by setting allowed origin patterns to "*".

Replit-Commit-Author: Agent
Replit-Commit-Session-Id: cf0ce029-5307-4389-9e35-20005ec61226
Replit-Commit-Checkpoint-Type: full_checkpoint
Replit-Commit-Event-Id: 8347336b-db43-452c-ac34-1750cef8f243
Replit-Commit-Screenshot-Url: https://storage.googleapis.com/screenshot-production-us-central1/0d1ef85f-b995-4b42-874c-8e9747bfe1dc/cf0ce029-5307-4389-9e35-20005ec61226/l6SoUkO